# mini-ftp

./: Cargo.toml
data/: user.csv
src/: command.rs  error.rs  lib.rs  tcp.rs
