[package]
name = "mini-ftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
csv = "1.1.6"
env_logger = "0.9.0"
log = "0.4.14"
nom = "7.1.0"
owning_ref = "0.4.1"
rustyline = "9.1.2"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.30"
